tests/snapshots/examples_fixtures/aoc__2025__aoc_day5_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day5_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day5_part2.flx:112:19
    |
112 | let range_lines = [trim(line) | line <- slice(lines, 0, sep), trim(line) != ""]
    |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day5_part2.flx:113:14
    |
113 | let ranges = [parse_range_line(line) | line <- range_lines]
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Define it first: let map = ...;

Found 2 errors.
== stdout ==
<not executed>
